Scenario3/TraditionalDevOps/service-mesh/tenant-policies/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: tenant-auth-policy
  namespace: ${TENANT_NAMESPACE}
spec:
  selector:
    matchLabels:
      tenant: ${TENANT_NAME}
  rules:
    - from:
        - source:
            namespaces: ["${TENANT_NAMESPACE}"]
      to:
        - operation:
            methods: ["*"]
